<resources>
    <string name="app_name">COVID-19</string>
    <string name="Total">TOTAL: </string>
    <string name="Title">COVID-19</string>
    <string name="deaths">DEATHS: </string>
    <string name="new_cases">NEW CASES: </string>
    <string name="new_deaths">NEW DEATHS: </string>
    <string name="recovered">Recovered</string>
    <string name="search">Search Country </string>
    <string name="india">INDIA</string>
    <string name="total_test">TOTAL TESTS: </string>
    <string name="safe">#STAY HOME, STAY SAFE</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">India</string>
    <string name="tab_text_2">World</string>
    <string name="Coming_Soon">This feature will be soon available</string>
    <string name="Confirmed">Confirmed</string>
    <string name="Deceased">Deceased</string>
    <string name="All">All States/UTs :</string>
    <string name="location">Location</string>
    <string name="world">Across World</string>
    <string name="note">NOTE : World Stats may take longer to update</string>
    <string name="all_World">All Countries :</string>
</resources>
