<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<RelativeLayout
    android:id="@+id/OverView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/corona_back2"
    android:fadeScrollbars="false"
    android:isScrollContainer="false"
    android:scrollbarAlwaysDrawVerticalTrack="false">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="223dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/rounded"
        android:elevation="7dp" />

    <TextView
        android:id="@+id/rec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/con"
        android:layout_centerHorizontal="true"
        android:elevation="7dp"
        android:fontFamily="@font/roboto"
        android:text="00000"
        android:textColor="@color/green"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="42dp"
        android:elevation="7dp"
        android:fontFamily="monospace"
        android:text="Your State"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dec1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ddec1"
        android:layout_alignTop="@+id/con1"
        android:layout_marginStart="-8dp"
        android:layout_marginTop="0dp"
        android:elevation="7dp"
        android:fontFamily="@font/roboto"
        android:text="000"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/dec1"
        android:layout_alignTop="@+id/con"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="0dp"
        android:elevation="7dp"
        android:fontFamily="@font/roboto"
        android:text="00000"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/drec1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dec1"
        android:layout_centerHorizontal="true"
        android:elevation="7dp"
        android:fontFamily="@font/roboto"
        android:text="+0"
        android:textColor="@color/green"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/ddec1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/drec1"
        android:layout_marginEnd="71dp"
        android:elevation="7dp"
        android:fontFamily="@font/roboto"
        android:text="+0"
        android:textColor="@color/black"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/rec1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/con1"
        android:layout_centerHorizontal="true"
        android:elevation="7dp"
        android:fontFamily="@font/roboto"
        android:text="00000"
        android:textColor="@color/green"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/confirm1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="65dp"
        android:elevation="7dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/Confirmed"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/ddec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/dec1"
        android:layout_below="@+id/rec"
        android:layout_marginStart="6dp"
        android:layout_marginTop="1dp"
        android:elevation="7dp"
        android:fontFamily="@font/roboto"
        android:text="+0"
        android:textColor="@color/black"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView16"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="167dp"
        android:elevation="7dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/Confirmed"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="145dp"
        android:elevation="7dp"
        android:fontFamily="monospace"
        android:text="Across India"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/recover1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/decease1"
        android:layout_centerHorizontal="true"
        android:elevation="7dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/recovered"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/drec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/rec"
        android:layout_below="@+id/rec"
        android:elevation="7dp"
        android:fontFamily="@font/roboto"
        android:text="+0"
        android:textColor="@color/green"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/con1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/decease1"
        android:layout_marginStart="49dp"
        android:layout_marginTop="5dp"
        android:elevation="7dp"
        android:fontFamily="@font/roboto"
        android:text="00000"
        android:textColor="@color/red"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dcon1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/drec1"
        android:layout_marginStart="58dp"
        android:elevation="7dp"
        android:fontFamily="@font/roboto"
        android:text="+0"
        android:textColor="@color/red"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/decease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/dec"
        android:layout_alignTop="@+id/confirm"
        android:layout_marginEnd="-5dp"
        android:layout_marginTop="1dp"
        android:elevation="7dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/Deceased"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/recover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/confirm"
        android:layout_centerHorizontal="true"
        android:elevation="7dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/recovered"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/dcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/con1"
        android:layout_below="@+id/rec"
        android:elevation="7dp"
        android:fontFamily="@font/roboto"
        android:text="+0"
        android:textColor="@color/red"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/con"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/con1"
        android:layout_marginTop="190dp"
        android:elevation="7dp"
        android:fontFamily="@font/roboto"
        android:text="00000"
        android:textColor="@color/red"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/decease1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/confirm1"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="0dp"
        android:elevation="7dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/Deceased"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="263dp"
        android:fontFamily="@font/raleway"
        android:text="@string/All"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="325dp"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:nestedScrollingEnabled="false"
            android:padding="8dp"
            android:scrollbars="none" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="290dp"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginStart="15dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="15dp">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:fontFamily="@font/raleway_medium"
                android:layout_marginTop="8dp"
                android:text="@string/Confirmed"
                android:textColor="@color/red"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/raleway_medium"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text="@string/recovered"
                android:textColor="@color/green"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textView18"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/raleway_medium"
                android:gravity="end"
                android:text="@string/Deceased"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="132dp"
        android:background="#483e3a3a"
        android:elevation="7dp" />


</RelativeLayout>
</android.support.v4.widget.NestedScrollView>
